# OpenModelicaWithPythonImage

./: .pre-commit-config.yaml  pyproject.toml
.pre-commit/: uic.py
omcpyimage/: __main__.py  config.py
omcpyimage/ui/: mainwindow.py
omcpyimage/widget/: mainwindow.py
ui/: mainwindow.ui
