[tool.poetry]
name = "openmodelicawithpythonimage"
version = "0"  # https://github.com/tiangolo/poetry-version-plugin/tree/main#readme
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "omcpyimage"},
]

[tool.poetry.scripts]
omcpyimage = "omcpyimage.__main__:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiohttp = "^3.8.3"
click = "^8.1.3"
lxml = "^4.9.2"
numpy = "^1.24.1"
pydantic = "^2.5.2"
schema = "^0.7.5"
toml = "^0.10.2"
pyside6 = "^6.6.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.7"
pyproject-flake8 = "^6.0.0.post1"
types-setuptools = "^67.1.0.2"
types-toml = "^0.10.8.2"

[tool.poetry-version-plugin]
source = "init"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
exclude = ".venv"
extend-exclude = "**/ui/*,"

[tool.isort]
profile = "black"
line_length = 79

[[tool.mypy.overrides]]
module = [
    "lxml.*",
    "schema",
]
ignore_missing_imports = true
