[tool.poetry]
name = "openmodelicawithpythonimage"
version = "0"  # https://github.com/tiangolo/poetry-version-plugin/tree/main#readme
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "omcpyimage"},
]

[tool.poetry.scripts]
omcpyimage = "omcpyimage.__main__:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
click = "^8.1.3"
lxml = "^4.9.2"
pydantic = "^2.5.2"
requests = "^2.32.0"
pyside6 = "^6.7.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pre-commit = "^3.7.1"
ruff = "^0.4.4"
types-requests = "^2.31.0.20240406"
types-setuptools = "^67.1.0.2"

[tool.poetry-version-plugin]
source = "init"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
exclude = ".venv"

[tool.isort]
profile = "black"
line_length = 79

[[tool.mypy.overrides]]
module = [
    "lxml.*",
    "schema",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "omcpyimage.ui.*",
]
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.ruff]
extend-exclude = [
    "*/ui/*.py"
]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "F", "E", "W", "C90", "I"
]
